# notepad--

./: Cursor.cpp  README.org  main.cpp
src/: CMakeLists.txt  Cursor.h  File_io.cpp  File_io.h  GUI.cpp  GUI.h  Gap_buffer.h  Keys.cpp  Keys.h  main.cpp
